--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,4 @@
-<h2>Welcome to home page</h2>
+<h1>Welcome to the Finance Tracker app</h1>
+<p>Find me in app/views/welcome/index.html.erb</p>
+
+<%= link_to 'Sign out', destroy_user_session_path, method: :delete%>
