--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -12,4 +12,9 @@
 
 .results-block{
   display: inline-block !important;
+  margin-bottom: 1rem !important;
+}
+
+.logout-button{
+  margin-right: 5px;
 }
