--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -8,7 +8,7 @@
         <%= text_field_tag :stock, params[:stock], placeholder: "Stock ticker symbol", autofocus: true, class: "form-control form-control-lg" %>
       </div>
       <div class="col-sm-3 no-left-padding">
-        <%= button_tag ype: :submit, class: "btn btn-success" do %>
+        <%= button_tag type: :submit, class: "btn btn-success" do %>
          <%= fa_icon 'search 2x' %>
         <% end %>
       </div>
@@ -17,7 +17,6 @@
 </div>
 
 <div id="results">
-
 </div>
 
 <% if !@tracked_stocks.empty? %>
